# primer.hs

./: .gitignore  Primer.cabal  README.md
examples/: Factorial.pri
lib/: BinarySearch.pri  Library.pri  MarsRovers.pri
src/: Evaluator.hs  Main.hs  Parser.y  Scanner.x  Types.hs
